// Message definitions for generic blobs of encrypted and authenticated data.

syntax = "proto3";

package cmdsafe;
option go_package = "crypto";

// The password key derivation configuration.
message UserKey {
  bytes hash = 1;
  KeyAlgo algorithm = 2;
  ScryptConfig scrypt = 3;
}

// Supported key derivation algorithms.
enum KeyAlgo {
  SCRYPT = 0;
}

message ScryptConfig {
  bytes salt = 1;
  int64 n = 2;
  int32 r = 3;
  int32 p = 4;
}

// Supported encryption algorithms.
enum CipherAlgo {
  AES256CTR = 0;
}

message CryptoEnvelope {
  bytes hmac = 1;           // The hmac of algorithm+iv+key+data (in this order).
  bytes iv = 2;             // The initialization vector.
  bytes key = 3;            // The encryption key.
  CipherAlgo algorithm = 4; // The encryption algorithm.
  UserKey user_key = 5;     // The key derived from the user password.
  bytes data = 6;           // The encrypted data.
}
